


# ------------------------------------------------------------------------------
#
#   Copyright (C) 2023 Concordia NAVlab. All rights reserved.
#
#   @Filename: CMakeLists.txt
#
#   @Author: Linhan Qiao
#
#   @Date: 2023-10-11
#
#   @Email: q_linhan.live@concordia.ca
#
#   @Description: 
#
# ------------------------------------------------------------------------------

find_package(catkin REQUIRED COMPONENTS
    cv_bridge
    image_transport
    rospy
    sensor_msgs
    std_msgs)

